--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.12.8",
+    "css-loader": "^0.23.1",
     "del": "^2.2.0",
+    "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
     "gulp-size": "^2.1.0",
     "gulp-webpack": "^1.5.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-plumber": "^1.0.1",
     "run-sequence": "^1.2.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
   }
 }
