--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.0.1",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-webpack": "^1.5.0",
+    "require-dir": "^0.3.0",
     "run-sequence": "^1.2.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
